--- a/src/pages/shared/Navbar.css
+++ b/src/pages/shared/Navbar.css
@@ -4,9 +4,9 @@
   
   .profile-name {
     position: absolute;
-    top: calc(100% + 5px);
+    top: calc(100% - 50px);
     left: 50%;
-    transform: translateX(-50%);
+    transform: translateX(-130%);
     background-color: rgba(0, 0, 0, 0.8);
     color: #fff;
     padding: 5px 10px;
