--- a/src/pages/shared/Footer.css
+++ b/src/pages/shared/Footer.css
@@ -5,7 +5,7 @@
     justify-content: center;
     text-align: center;
     padding: 20px;
-    background-color: #f0f0f0;
+    background-color: #81E6D9;
   }
   
   .footer-container p {
