--- a/src/pages/shared/Navbar.css
+++ b/src/pages/shared/Navbar.css
@@ -18,3 +18,13 @@
     display: block;
   }
   
+  .light-theme {
+    background-color: #ffffff;
+    color: #000000;
+  }
+  
+  /* Dark Theme Styles */
+  .dark-theme {
+    background-color: #333333;
+    color: #ffffff;
+  }
